--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,9 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+#other files
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.filters
